--- a/client/app/tinderCard.scss
+++ b/client/app/tinderCard.scss
@@ -24,8 +24,8 @@ $accent-red: #F7514B;
   position: absolute;
   top: 0;
   left: 0;
-  width: 90%;
-  margin-left: 5%;
+  width: 80%;
+  margin-left: 10%;
   border-radius: 10px;
   border: 1px solid #ccc;
   overflow: hidden;
